<resources>
    <string name="app_name">ToDoApp</string>

    <string name="name_login">Name</string>
    <string name="password_login">Pass</string>
    <string name="login">Login</string>
    <string name="create_account_login">Create account</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="yyyy_mm_dd">yyyy/MM/dd</string>
    <string name="priority">Priority</string>
    <string name="add">Add</string>
    <string name="add_to_calendar">Add to calendar</string>

    <string name="add_todo_button">Add Todo</string>
    <string name="todo_list">ToDo List</string>
    <string name="view_profile_button">Profile</string>

    <string name="user_name">User Name</string>
    <string name="image_description_profile">profile picture</string>
    <string name="things_to_do">Things to do today: 2</string>
    <string name="things_done">Things already done: 20</string>

    <string name="name_register">Name</string>
    <string name="username_register">username</string>
    <string name="password_register">password</string>
    <string name="repeat_password_register">repeat password</string>
    <string name="create_account_register">Create account</string>

    <string name="image_description_singleitem">task picture</string>
    <string name="todo_title">TextView</string>

</resources>
