<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorbackground"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/userEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/name_login"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/passEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/password_login"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorbutton"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account_login"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:onClick="OpenRegisterActivity"
        android:background="@color/colorbutton"
        android:textColor="@android:color/white"/>

</LinearLayout>
